crates/formatter/tests/snapshots/snapshots__synapse__main__delta__58__21drop_device_max_stream_id.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table device_max_stream_id;
