crates/formatter/tests/snapshots/snapshots__synapse__main__delta__58__22users_have_local_media.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into background_updates (ordering, update_name, progress_json)
values (5822, 'users_have_local_media', '{}');
